# FTS-Plugins

./: .gitmodules  Cargo.toml  DESIGN.md  Justfile  flake.nix
.devenv/: run  (+2 more)
apps/fts-audio/: Cargo.toml
apps/fts-audio/src/: lib.rs
apps/fts-guide/: Cargo.toml
apps/fts-guide/src/: editor.rs  lib.rs
apps/fts-guide/src/audio/: click_player.rs  count_player.rs  guide_player.rs  mod.rs  routing.rs  trigger_scheduler.rs
apps/fts-guide/src/count_in/: calculator.rs  mod.rs  pattern.rs  state.rs
apps/fts-guide/src/midi/: mod.rs  notes.rs
apps/fts-guide/src/samples/: cache.rs  click_loader.rs  guide_loader.rs  loader.rs  mod.rs
apps/fts-guide/tests/: reaper_guide_full.rs  reaper_guide_load.rs  reaper_guide_midi_gen.rs  reaper_guide_playback.rs  reaper_guide_structure.rs
apps/fts-macros/: ARCHITECTURE.md  Cargo.toml  DAW_INTEGRATION.md  INTEGRATION_GUIDE.md  MAPPING_FORMAT.md
apps/fts-macros/src/: lib.rs  mapping.rs  reaper_bootstrap.rs  resolver.rs  routed_handler.rs
apps/fts-macros/tests/: README.md  macro_daw_sync_integration.rs  macro_pipeline.rs  mapping_integration.rs  run_macro_tests.sh  vst_parameter_control.rs
apps/fts-macros/tests/common/: mod.rs
apps/gui-test/: Cargo.toml
apps/gui-test/src/: main.rs  main_comp.rs  main_parented.rs  main_screenshot.rs  main_softbuffer.rs
crates/audio-gui/: Cargo.toml
crates/audio-gui/src/: drag.rs  lib.rs  theme.rs
crates/audio-gui/src/controls/: dropdown.rs  knob.rs  mod.rs  range_slider.rs  segment.rs  slider.rs  toggle.rs  xy_pad.rs
crates/audio-gui/src/data/: list_box.rs  mod.rs  property_panel.rs  tree_view.rs
crates/audio-gui/src/layout/: collapsible.rs  context_menu.rs  header.rs  mod.rs  scroll_panel.rs  section.rs  tabbed_panel.rs  tooltip.rs
crates/audio-gui/src/meters/: gr_meter.rs  level_meter.rs  mod.rs  spectrum.rs
crates/audio-gui/src/viz/: eq_graph.rs  eq_graph_painter.rs  midi_keyboard.rs  mod.rs  transfer_curve.rs  waveform.rs
crates/fts-chorus/chorus-plugin/: Cargo.toml
crates/fts-chorus/chorus-plugin/src/: editor.rs  lib.rs
crates/fts-comp/comp-dsp/: Cargo.toml
crates/fts-comp/comp-dsp/examples/: verify_implementation.rs
crates/fts-comp/comp-dsp/src/: chain.rs  character.rs  compressor.rs  detector.rs  gain.rs  lib.rs
crates/fts-comp/comp-dsp/tests/: compressor.rs
crates/fts-comp/comp-plugin/: Cargo.toml  Dioxus.toml
crates/fts-comp/comp-plugin/src/: editor.rs  lib.rs  main.rs
crates/fts-comp/comp-plugin/tests/: reaper_comp_gui.rs  reaper_comp_load.rs  reaper_comp_process.rs
crates/fts-comp/comp-profiles/: Cargo.toml
crates/fts-comp/comp-profiles/src/: control.rs  la2a.rs  lib.rs  ssl_bus.rs  urei_1176.rs
crates/fts-comp/comp-ui/: Cargo.toml
crates/fts-comp/comp-ui/src/: control_view.rs  lib.rs  profile_view.rs
crates/fts-delay/delay-dsp/: Cargo.toml
crates/fts-delay/delay-dsp/src/: bbd_delay.rs  chain.rs  clean_delay.rs  engine.rs  lib.rs  lofi_delay.rs  modulation.rs  pitch_delay.rs  reverse_delay.rs  rhythm_delay.rs  shimmer_delay.rs  tape_delay.rs
crates/fts-delay/delay-plugin/: Cargo.toml
crates/fts-delay/delay-plugin/src/: editor.rs  lib.rs
crates/fts-delay/delay-profiles/: Cargo.toml
crates/fts-delay/delay-profiles/src/: control.rs  core.rs  echoplex.rs  lib.rs  space_echo.rs
crates/fts-delay/delay-ui/: Cargo.toml
crates/fts-delay/delay-ui/src/: control_view.rs  lib.rs  profile_view.rs
crates/fts-dsp/: Cargo.toml
crates/fts-dsp/src/: biquad.rs  db.rs  delay_line.rs  dither.rs  envelope.rs  gain_curve.rs  lib.rs  loudness.rs  note_sync.rs  oversampling.rs  prng.rs  slew.rs  smoothing.rs  soft_clip.rs
crates/fts-dsp/tests/: loudness.rs  oversampling.rs
crates/fts-eq/eq-dsp/: Cargo.toml
crates/fts-eq/eq-dsp-v2/: Cargo.toml
crates/fts-eq/eq-dsp-v2/src/: band.rs  biquad.rs  chain.rs  design.rs  lib.rs  prototype.rs  section.rs  test_util.rs  transform.rs  zpk.rs
crates/fts-eq/eq-dsp/benches/: throughput.rs
crates/fts-eq/eq-dsp/examples/: analyze_proq.rs  cascade_sweep.rs  process_wav.rs
crates/fts-eq/eq-dsp/src/: band.rs  chain.rs  coeff.rs  filter_type.rs  lib.rs  oversample.rs  response.rs  section.rs  test_util.rs
crates/fts-eq/eq-dsp/tests/: coeff_match.rs  deterministic.rs  impulse_response.rs  nan_free.rs  reset_state.rs  sample_rate_independence.rs
crates/fts-eq/eq-plugin/: Cargo.toml
crates/fts-eq/eq-plugin/src/: editor.rs  lib.rs
crates/fts-eq/eq-pro-dsp/: Cargo.toml
crates/fts-eq/eq-pro-dsp/.claude/: settings.json
crates/fts-eq/eq-pro-dsp/.devenv/: profile  run  tasks.db-shm  tasks.db-wal
crates/fts-eq/eq-pro-dsp/src/: band.rs  biquad.rs  cascade.rs  chain.rs  constants.rs  delay.rs  design.rs  elliptic.rs  lib.rs  parameters.rs  prototype.rs  response.rs  section.rs  shelf.rs  shelf_zpk.rs  transform.rs  zpk.rs
crates/fts-eq/eq-pro-dsp/tests/: bandpass_integration.rs  parameter_transforms_test.rs  q_transformation_formula_test.rs  shelf_debug_test.rs  shelf_effective_q_formula.rs  shelf_filter_validation.rs  shelf_gain_trace.rs  shelf_q_gain_relationship.rs  shelf_zpk_implementation.rs  shelf_zpk_integration_test.rs
crates/fts-eq/eq-ui/: Cargo.toml
crates/fts-eq/eq-ui/src/: control_view.rs  lib.rs  profile_view.rs
crates/fts-gate/gate-dsp/: Cargo.toml
crates/fts-gate/gate-dsp/src/: adaptive_decay.rs  chain.rs  classifier.rs  detector.rs  envelope.rs  lib.rs  sync.rs
crates/fts-gate/gate-dsp/tests/: gate.rs
crates/fts-gate/gate-plugin/: Cargo.toml
crates/fts-gate/gate-plugin/src/: editor.rs  lib.rs
crates/fts-gate/gate-ui/: Cargo.toml
crates/fts-gate/gate-ui/src/: control_view.rs  lib.rs  profile_view.rs
crates/fts-limiter/limiter-plugin/: Cargo.toml
crates/fts-limiter/limiter-plugin/src/: lib.rs
crates/fts-limiter/limiter-profiles/: Cargo.toml
crates/fts-limiter/limiter-profiles/src/: control.rs  l2_style.rs  lib.rs  mastering.rs
crates/fts-limiter/limiter-ui/: Cargo.toml
crates/fts-livetune/livetune-dsp/: Cargo.toml
crates/fts-plugin-core/: Cargo.toml
crates/fts-plugin-core/src/: lib.rs
crates/fts-sample/: Cargo.toml
crates/fts-sample/src/: dialog.rs  lib.rs
(+2650 files in other folders)
