[workspace]
members = [
    "crates/*",
    "apps/*",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
fts-plugin-core = { path = "crates/fts-plugin-core" }
fts-ui = { git = "https://github.com/FastTrackStudios/fts-ui.git", branch = "main" }
macromod = { git = "https://github.com/FastTrackStudios/FastTrackStudio.git", branch = "main" }
daw-control = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-control-sync = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-proto = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-reaper = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }

# Dependencies shared with daw workspace
# Use crates.io facet 0.43.x to match roam's requirement
facet = { version = "0.44" }
facet-core = { version = "0.44" }
facet-postcard = { version = "0.44" }
facet-path = { version = "0.44" }
facet-format = { version = "0.44" }
facet-pretty = { version = "0.44" }
facet-json = { version = "0.44" }
facet-value = { version = "0.44" }
facet-yaml = { version = "0.44" }

roam = { git = "https://github.com/bearcove/roam.git", branch = "main" }
roam-inprocess = { git = "https://github.com/bearcove/roam.git", branch = "main" }
roam-stream = { git = "https://github.com/bearcove/roam.git", branch = "main" }

# DAW facade crate (for reaper-test)
daw = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }

# REAPER integration testing
reaper-test = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }

# NIH-plug audio plugin framework (FTS fork with Dioxus UI + REAPER embed support)
nih_plug = { git = "https://github.com/FastTrackStudios/nih-plug.git", branch = "reaper-embed-ui" }
nih_plug_dioxus = { git = "https://github.com/FastTrackStudios/nih-plug.git", branch = "reaper-embed-ui" }

# Audio loading
symphonium = { version = "0.6", default-features = false, features = ["wav", "pcm", "fft-resampler"] }

# REAPER bindings (FTS fork — must match daw workspace)
reaper-low = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-medium = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-high = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }

# Atomics
atomic_float = "1.1"

# Async / threading
crossbeam-channel = "0.5"
once_cell = "1.19"

# Tracing
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
eyre = "0.6"

# Async runtime (for fts-macros)
tokio = { version = "1", features = ["sync", "rt"] }

# Override blitz crates from upstream git to use our FTS fork with post-processing support
# Fork: https://github.com/FastTrackStudios/blitz (branch: post-processing)
[patch."https://github.com/DioxusLabs/blitz.git"]
dioxus-native = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
dioxus-native-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-html = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-net = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-paint = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-traits = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-shell = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
stylo_taffy = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }

[patch.crates-io]
# Blitz crates - FTS fork with post-processing support
dioxus-native = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
dioxus-native-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-html = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-net = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-paint = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-traits = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
blitz-shell = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
stylo_taffy = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "a72a6bd" }
# Stylo crates - FTS fork with derive_more v1 fix
stylo = { git = "https://github.com/FastTrackStudios/stylo.git", rev = "8bb8c3b" }
selectors = { git = "https://github.com/FastTrackStudios/stylo.git", rev = "8bb8c3b" }
# Anyrender crates - FTS fork with post-processing support
anyrender = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_vello = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_vello_cpu = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_vello_hybrid = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_svg = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
wgpu_context = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
