[workspace]
members = [
    "apps/fts-audio",
    "apps/fts-guide",
    "apps/gui-test",
    "xtask",
]
exclude = [
    "apps/fts-macros",  # depends on `roam` crate from daw repo
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrackStudio"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# ── FTS-Audiocore ────────────────────────────────────────────────────────────
fts-plugin-core = { git = "https://github.com/FastTrackStudios/FTS-Audiocore.git", branch = "main" }
fts-dsp = { git = "https://github.com/FastTrackStudios/FTS-Audiocore.git", branch = "main" }
audio-gui = { git = "https://github.com/FastTrackStudios/FTS-Audiocore.git", branch = "main" }
fts-sample = { git = "https://github.com/FastTrackStudios/FTS-Audiocore.git", branch = "main" }
meter-dsp = { git = "https://github.com/FastTrackStudios/FTS-Audiocore.git", branch = "main" }
meter-ui = { git = "https://github.com/FastTrackStudios/FTS-Audiocore.git", branch = "main" }

# ── Plugin repos (for assembly / gui-test) ───────────────────────────────────
comp-plugin = { git = "https://github.com/FastTrackStudios/FTS-Comp.git", branch = "main" }
eq-plugin = { git = "https://github.com/FastTrackStudios/FTS-EQ.git", branch = "main" }
gate-plugin = { git = "https://github.com/FastTrackStudios/FTS-Gate.git", branch = "main" }
delay-plugin = { git = "https://github.com/FastTrackStudios/FTS-Delay.git", branch = "main" }
reverb-plugin = { git = "https://github.com/FastTrackStudios/FTS-Reverb.git", branch = "main" }
nam-plugin = { git = "https://github.com/FastTrackStudios/FTS-NAM.git", branch = "main" }
rider-plugin = { git = "https://github.com/FastTrackStudios/FTS-Rider.git", branch = "main" }
trigger-plugin = { git = "https://github.com/FastTrackStudios/FTS-Trigger.git", branch = "main" }
pitch-plugin = { git = "https://github.com/FastTrackStudios/FTS-Pitch.git", branch = "main" }
livetune-plugin = { git = "https://github.com/FastTrackStudios/FTS-Tune.git", branch = "main" }
midi-guitar-plugin = { git = "https://github.com/FastTrackStudios/FTS-MIDI-Guitar.git", branch = "main" }
saturate-plugin = { git = "https://github.com/FastTrackStudios/FTS-Saturate.git", branch = "main" }

# ── NIH-plug framework ───────────────────────────────────────────────────────
nih_plug = { git = "https://github.com/FastTrackStudios/nih-plug.git", branch = "reaper-embed-ui" }
nih_plug_dioxus = { git = "https://github.com/FastTrackStudios/nih-plug.git", branch = "reaper-embed-ui" }

# ── UI ───────────────────────────────────────────────────────────────────────
fts-ui = { git = "https://github.com/FastTrackStudios/fts-ui.git", branch = "main" }

# ── DAW integration ──────────────────────────────────────────────────────────
macromod = { git = "https://github.com/FastTrackStudios/signal.git", branch = "main" }
daw = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-control = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-control-sync = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-proto = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-reaper = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
fts-audio-proto = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
reaper-test = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
reaper-low = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-medium = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
reaper-high = { git = "https://github.com/FastTrackStudios/reaper-rs.git", branch = "feat/reaper-763-ruler-lanes" }
vox = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-inprocess = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }
vox-stream = { git = "https://github.com/Codys-Wright/vox.git", rev = "2a2f793b" }

# ── Audio loading ─────────────────────────────────────────────────────────────
symphonium = { version = "0.6", default-features = false, features = ["wav", "pcm", "fft-resampler"] }

# ── Common utilities ─────────────────────────────────────────────────────────
atomic_float = "1.1"
crossbeam-channel = "0.5"
once_cell = "1.19"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
eyre = "0.6"
tokio = { version = "1", features = ["sync", "rt"] }

# ── Facet serialization ───────────────────────────────────────────────────────
facet = { version = "0.44" }
facet-core = { version = "0.44" }
facet-postcard = { version = "0.44" }
facet-path = { version = "0.44" }
facet-format = { version = "0.44" }
facet-pretty = { version = "0.44" }
facet-json = { version = "0.44" }
facet-value = { version = "0.44" }
facet-yaml = { version = "0.44" }

# ── Local development overrides ───────────────────────────────────────────────
# Uncomment to use local checkouts instead of GitHub.
#
# [patch."https://github.com/FastTrackStudios/FTS-Audiocore.git"]
# fts-plugin-core = { path = "../FTS-Audiocore/fts-plugin-core" }
# audio-gui = { path = "../FTS-Audiocore/audio-gui" }
# fts-dsp = { path = "../FTS-Audiocore/fts-dsp" }

[patch."https://github.com/FastTrackStudios/daw.git"]
reaper-test = { path = "../daw/crates/reaper-test" }

[patch."https://github.com/FastTrackStudios/nih-plug.git"]
nih_plug = { path = "forks/nih-plug" }
nih_plug_dioxus = { path = "forks/nih-plug/nih_plug_dioxus" }

[patch."https://github.com/DioxusLabs/blitz.git"]
dioxus-native = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
dioxus-native-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-html = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-net = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-paint = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-traits = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-shell = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
stylo_taffy = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }

[patch.crates-io]
dioxus-native = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
dioxus-native-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-dom = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-html = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-net = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-paint = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-traits = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
blitz-shell = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
stylo_taffy = { git = "https://github.com/FastTrackStudios/blitz.git", rev = "45bc77fb" }
stylo = { git = "https://github.com/FastTrackStudios/stylo.git", rev = "8bb8c3b" }
selectors = { git = "https://github.com/FastTrackStudios/stylo.git", rev = "8bb8c3b" }
anyrender = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_vello = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_vello_cpu = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_vello_hybrid = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
anyrender_svg = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
wgpu_context = { git = "https://github.com/FastTrackStudios/anyrender.git", rev = "422b5d0" }
moire = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-macros-noop = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-runtime = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-tokio = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-trace-capture = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-trace-types = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-types = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-wasm = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-wire = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }

[patch."https://github.com/bearcove/moire"]
moire = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-macros-noop = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-runtime = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-tokio = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-trace-capture = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-trace-types = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-types = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-wasm = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
moire-wire = { git = "https://github.com/FastTrackStudios/moire.git", rev = "6d856f2" }
