[package]
name = "fts-macros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fts-plugin-core = { workspace = true, default-features = false }
nih_plug = { workspace = true }
macromod = { workspace = true }
atomic_float = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: Add synchronous DAW API for setting FX parameters from audio processing loop
# Once available, will use: daw-control for setting macro target FX parameters

[dev-dependencies]
# REAPER integration testing utilities
eyre = "0.6"
