[package]
name = "fts-macros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
daw-control-sync = { workspace = true }
roam = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
eyre = { workspace = true }
fts-plugin-core = { workspace = true, default-features = false }
nih_plug = { workspace = true }
macromod = { workspace = true }
atomic_float = { workspace = true }

[dev-dependencies]
