[package]
name = "gui-test"
version.workspace = true
edition.workspace = true
description = "Standalone GUI rendering test — verifies native wgpu surface path without a DAW"

[[bin]]
name = "gui-test"
path = "src/main.rs"

[[bin]]
name = "gui-test-softbuffer"
path = "src/main_softbuffer.rs"

[[bin]]
name = "gui-test-parented"
path = "src/main_parented.rs"

[[bin]]
name = "gui-test-screenshot"
path = "src/main_screenshot.rs"

[[bin]]
name = "gui-test-comp"
path = "src/main_comp.rs"

[dependencies]
nih_plug_dioxus = { workspace = true }
png = "0.17"
atomic_float = "1"

# Only one plugin at a time to avoid duplicate CLAP/VST3 entry point symbols.
# Switch to a different plugin crate to screenshot it.
comp-plugin = { workspace = true }
# delay-plugin = { workspace = true }
# eq-plugin = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
