[package]
name = "fts-dsp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Airwindows DSP primitives — Biquad, DelayLine, PRNG, dither, soft clip, slew limiting"

[dependencies]
# Most modules are pure Rust with zero dependencies.
# ebur128 is used for EBU R128 compliant loudness metering.
ebur128 = { version = "0.1", optional = true }

[features]
default = ["loudness"]
loudness = ["ebur128"]
