[package]
name = "comp-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "FTS Compressor — CLAP/VST3 audio plugin entry point"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "comp-desktop"
path = "src/main.rs"

[dependencies]
audio-gui = { workspace = true }
fts-plugin-core = { path = "../../fts-plugin-core" }
fts-dsp = { workspace = true }
comp-dsp = { path = "../comp-dsp" }
comp-profiles = { path = "../comp-profiles" }
comp-ui = { path = "../comp-ui" }
nih_plug = { workspace = true }
nih_plug_dioxus = { git = "https://github.com/FastTrackStudios/nih-plug.git", branch = "reaper-embed-ui" }
atomic_float = { workspace = true }

[dev-dependencies]
reaper-test = { workspace = true }
daw-proto = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
