[package]
name = "comp-ui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Compressor GUI — transfer curve, gain reduction meters, and profile theme rendering"

[dependencies]
audio-gui = { workspace = true }
fts-plugin-core = { path = "../../fts-plugin-core" }
comp-dsp = { path = "../comp-dsp" }
comp-profiles = { path = "../comp-profiles" }
