[package]
name = "delay-dsp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Delay processing engine — tape delay, pitch delay with feedback filters from eq-dsp"

[dependencies]
fts-dsp = { path = "../../fts-dsp" }
eq-dsp = { path = "../../fts-eq/eq-dsp" }
