[package]
name = "delay-profiles"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Delay hardware profiles — Space Echo, Echoplex parameter mappings"

[dependencies]
delay-dsp = { path = "../delay-dsp" }
eq-profiles = { workspace = true }
