[package]
name = "delay-ui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Delay GUI — tap tempo, feedback display, and profile theme rendering"

[dependencies]
audio-gui = { workspace = true }
fts-plugin-core = { path = "../../fts-plugin-core" }
delay-dsp = { path = "../delay-dsp" }
delay-profiles = { path = "../delay-profiles" }
